# -

./: ADAPTIVE_TREND_RESULTS.md  ADA_USDT-1h.feather  ADA_USDT-4h.feather  AGENTS.md  AVAX_USDT-1h.feather  AVAX_USDT-4h.feather  BENCHMARK_STATUS.md  BNB_USDT-1h.feather  BNB_USDT-4h.feather  BTC_USDT-1h.feather  BTC_USDT-4h.feather  ETH_USDT-1h.feather  ETH_USDT-4h.feather  FINAL_STATUS.md  FREQTRADE_DATA_DIAGNOSIS.md  FREQTRADE_MIGRATION_PLAN.md  FREQTRADE_MIGRATION_STATUS.md  FREQTRADE_RISK_GAPS.md  FREQTRADE_STRATEGY_MAPPING.md  LINK_USDT-1h.feather  README.md  SECURITY.md  VALIDATION_COMPARISON.md  WALK_FORWARD_ANALYSIS.md  __init__.py  agent.py  approval_signing.py  backtest-result-2026-07-10_11-45-21.meta.json  backtest-result-2026-07-10_11-45-43.meta.json  backtest-result-2026-07-10_11-45-59.meta.json  backtest-result-2026-07-10_11-46-04.meta.json  backtest-result-2026-07-10_11-46-09.meta.json  backtest-result-2026-07-10_11-46-14.meta.json  backtest-result-2026-07-10_11-46-19.meta.json  backtest-result-2026-07-10_11-46-23.meta.json  backtest-result-2026-07-10_11-46-29.meta.json  backtest-result-2026-07-10_11-46-33.meta.json  backtest-result-2026-07-10_11-46-39.meta.json  backtest-result-2026-07-10_11-46-44.meta.json  backtest-result-2026-07-10_11-46-49.meta.json  (+40 more)
